[package]
name = "rcrack"
version = "0.0.1"
edition = "2021"
authors = ["TheHolyTachanka"]
description = "Hash cracking in rust"
repository = "https://github.com/TheHolyTachanka/RCrack"
license = "GPL-3"

[dependencies]
instant = "0.1.9"
rayon = "1.5.1"
easy_reader = "0.5.1"
clap = {version = "3.2.16", features = ["derive"]}

md-5 = "0.9.1"
sha2 = "0.9.5"
sha1 = "0.6.0"
ripemd320 = "0.9.0"
colored = "2.0.0"
